--- a/about.html
+++ b/about.html
@@ -1,18 +1,17 @@
 ---
 layout: default
-title: "The high quality, completely customizable and 100% free blog template for Jekyll"
-description: ""
+title: "How'd you get here??"
+description: "Honestly though your not supposed to be here"
 ---
 
 <div class="about reveal">
-  <img src="{% asset_path 'about.jpg' %}" alt="About Nielsen Ramon header image" />
+  <img src="{% asset_path 'about.jpg' %}" alt="About Ben Vincent header image" />
   <h1>About me</h1>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Seriously how'd you get here. This page isn't enabled, but I guess you've
+     worked with jekyll and just hardlinked yourself to theis page wondering what
+     was here... well congrats. You've found the egg...
+
+     <- image ->
   </p>
 </div>
