--- a/404.html
+++ b/404.html
@@ -18,6 +18,10 @@ sitemap: false
   {% endif %}
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNN693"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <main role="main" class="notfound-wrapper">
     <div class="notfound-content">
       <h1><a href="{{ '/' | relative_url }}" title="Back to homepage">{{ site.name }}</a></h1>
