--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@ sitemap: false
     </div>
   </main>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js" crossorigin="anonymous" integrity="sha384-0bIyOfFEbXDmR9pWVT6PKyzSRIx8gTXuOsrfXQA51wfXn3LRXt+ih6riwq9Zv2yn"></script>
   <script>
     WebFont.load({
       google: {
